# document-intelligence-refinery

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.refinery/: chunking_ledger.jsonl  extraction_ledger.jsonl  navigation_ledger.jsonl  refinery.db  retrieval_ledger.jsonl
.refinery/pageindex/: 2018_Audited_Financial_Statement_Report.pdf.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.pdf.json  2021_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.pdf.json  Annual_Report_2018.json  Annual_Report_JUNE-2018.pdf.json  Consumer Price Index March 2025.pdf.json  Security_PD_1.json  tax_expenditure_ethiopia_2021_22.pdf.json
.refinery/profiles/: 2018_Audited_Financial_Statement_Report.pdf.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.pdf.json  2019_Audited_Financial_Statement_Report.pdf.json  2021_Audited_Financial_Statement_Report.pdf.json  2022_Audited_Financial_Statement_Report.pdf.json  Annual_Report_JUNE-2018.pdf.json  Consumer Price Index June 2025.pdf.json  (+6 more)
frontend/src/: App.jsx  (+1 more)
research/: Domain_Notes.md
rubric/: extraction_rules.yaml
scripts/: check_ollama.py  generate_profiles.py  run_demo.py  test_chunking.py  test_vision_json.py  verify_full_pipeline.py  verify_refinements.py
src/: server.py
tests/: test_fact_extractor.py  test_query_agent.py  test_sql_database.py  verify_agent_tools.py  verify_extraction.py  verify_full_pipeline.py  verify_models.py  verify_triage.py
tmp/: debug_pdf.py  test_audit.py  verify_db.py
tools/: db_explorer.py
(+31 files in other folders)
