[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "docling>=2.76.0",
    "huggingface-hub[hf-xet]>=0.36.2",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "sentence-transformers>=5.2.3",
]
